--- a/Page3/style.css
+++ b/Page3/style.css
@@ -1,5 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Codystar|Quicksand:300,400,700");
-@import url("https://fonts.googleapis.com/css?family=Rubik");
+@import url('https://fonts.googleapis.com/css?family=Codystar|Quicksand:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+
 *,
 *::before,
 *::after {
@@ -12,10 +13,9 @@ body {
 #test {
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
   padding: 3rem;
   color: #777;
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Quicksand', sans-serif;
   font-size: 16px;
   position: absolute;
   left: 50%;
@@ -48,7 +48,7 @@ h6 {
   background: #41277c;
 }
 #scene::after {
-  content: "";
+  content: '';
   position: absolute;
   height: 100%;
   width: 50%;
@@ -350,7 +350,7 @@ h6 {
 }
 .tree::before,
 .tree::after {
-  content: "";
+  content: '';
   position: absolute;
 }
 .tree.one {
@@ -404,7 +404,7 @@ h6 {
   border-radius: 0 0 5px 5px;
 }
 .platform::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -415,13 +415,25 @@ h6 {
 }
 .platform .quote {
   padding: 0 1rem;
-  font-family: "Codystar", cursive;
+  font-family: 'Codystar', cursive;
   font-size: 1.8em;
   text-align: center;
   line-height: 1.4;
   color: #9fb798;
 }
-
+#canvasText {
+  padding: 0 1rem;
+  /* font-family: 'Codystar', cursive; */
+  font-size: 1em;
+  text-align: center;
+  line-height: 1.4;
+  color: #9fb798;
+  position: absolute;
+  z-index: 500;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
 @keyframes blow {
   0% {
     opacity: 0;
@@ -460,7 +472,7 @@ h6 {
   bottom: 0;
   padding-bottom: 50px;
   letter-spacing: 2px;
-  font-family: "verdana";
+  font-family: 'verdana';
   font-size: 12px;
   text-align: center;
   z-index: 99;
@@ -470,7 +482,7 @@ h6 {
 a {
   position: relative;
   letter-spacing: 2px;
-  font-family: "verdana";
+  font-family: 'verdana';
   font-size: 12px;
   color: #f48fb1;
   text-decoration: none;
@@ -526,7 +538,7 @@ a {
   width: 50px;
 }
 .heart:before {
-  content: "";
+  content: '';
   background-color: pink;
   border-radius: 100%;
   height: 50px;
@@ -535,7 +547,7 @@ a {
   top: -25px;
 }
 .heart:after {
-  content: "";
+  content: '';
   background-color: pink;
   border-radius: 100%;
   height: 50px;
@@ -569,7 +581,7 @@ body {
   display: flex;
   justify-content: center;
   /* height: 100vh; */
-  font-family: "Rubik", sans-serif;
+  font-family: 'Rubik', sans-serif;
 }
 
 #popup {
@@ -609,6 +621,7 @@ body {
   color: white;
   z-index: 10;
   margin-top: 40px;
+  height: 400px;
 }
 
 .app h1 {
@@ -654,7 +667,7 @@ canvas {
 }
 
 .cont_corazon > h1 {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   font-weight: 300;
 }
 .cont_corazon > hr {
@@ -874,7 +887,7 @@ svg {
 .butterfly::before {
   background: #362c13;
   border-radius: 50%;
-  content: "";
+  content: '';
   display: block;
   height: 110px;
   left: 50%;
@@ -951,7 +964,7 @@ svg {
   width: 130px;
 }
 .wing .bit:first-child::after {
-  content: "";
+  content: '';
   display: inline-block;
   height: 60px;
   left: -30px;
@@ -964,7 +977,7 @@ svg {
   width: 100px;
 }
 .wing .bit:last-child::after {
-  content: "";
+  content: '';
   display: inline-block;
   height: 45px;
   left: -24px;
@@ -1052,4 +1065,172 @@ svg {
   left: 50%;
   top: 50%;
   transform: translate(-65%, -50%);
+}
+
+/* For I love you toggle  */
+#test {
+  --primary: #2280f2;
+  --secondary: #dae2ed;
+  --base: #fff;
+  --bg: #2d1b55;
+  /* height: vh; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: var(--base);
+  background: var(--bg);
+  user-select: none;
+}
+
+#test span {
+  display: inline-block;
+  margin: 0 8px;
+  font-size: 4rem;
+}
+
+#test input {
+  display: none;
+}
+
+#test label {
+  --w: 90px;
+  --p: 2px;
+  --ease: cubic-bezier(0.165, 0.84, 0.44, 1);
+  position: relative;
+  padding: var(--p);
+  width: var(--w);
+  border: 2px solid var(--secondary);
+  border-radius: var(--w);
+  cursor: pointer;
+  background: var(--base);
+  margin-bottom: 0px;
+}
+
+#test label:before,
+label:after {
+  position: absolute;
+  width: 50%;
+  top: calc(50% - 0.6em);
+  display: inline-block;
+  text-align: center;
+  font-size: 30px;
+  color: var(--secondary);
+  transition: all 0.6s var(--ease);
+  z-index: 10;
+}
+
+#test label:before {
+  content: 'I';
+  left: 0;
+  color: var(--base);
+}
+#test label:after {
+  content: 'O';
+  left: 50%;
+}
+
+#test label i {
+  --d: calc(var(--w) / 2 - var(--p) / 2);
+  position: relative;
+  display: block;
+  height: 40px;
+  width: 40px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 100%;
+  background: var(--primary);
+  transition: all 0.6s var(--ease);
+}
+
+#test input[type='checkbox']:checked + label i {
+  transform: translatex(var(--d));
+}
+
+#test input[type='checkbox']:checked + label:before {
+  color: var(--secondary);
+}
+
+#test input[type='checkbox']:checked + label:after {
+  color: var(--base);
+}
+.checkBoxText {
+  top: 80%;
+  z-index: 400;
+  width: 100vw;
+  padding: 0 1rem;
+  /* font-family: 'Codystar', cursive; */
+  font-size: 1em;
+  text-align: center;
+  align-items: center;
+  /* vertical-align: bottom; */
+  line-height: 1.4;
+  color: #9fb798;
+  /* display: block; */
+  position: absolute;
+}
+
+/* Feedback form final  */
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
+#finalForm form {
+  max-width: 420px;
+  margin: 50px auto;
+}
+
+#finalForm .feedback-input {
+  color: white;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  border-radius: 5px;
+  line-height: 22px;
+  background-color: transparent;
+  border: 2px solid #cc6666;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width: 100%;
+  box-sizing: border-box;
+  outline: 0;
+}
+
+#finalForm .feedback-input:focus {
+  border: 2px solid #cc4949;
+}
+
+#finalForm textarea {
+  height: 150px;
+  line-height: 150%;
+  resize: vertical;
+}
+
+#finalForm [type='submit'] {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  width: 100%;
+  background: #cc6666;
+  border-radius: 5px;
+  border: 0;
+  cursor: pointer;
+  color: white;
+  font-size: 24px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: all 0.3s;
+  margin-top: -4px;
+  font-weight: 700;
+}
+#finalForm [type='submit']:hover {
+  background: #cc4949;
+}
+.buttomText {
+  text-align: center;
+  color: white;
+  line-height: 1.5em;
+}
+.butterflyText {
+  top: 80%;
+  position: absolute;
+  align-self: center;
 }
