--- a/Page3/style.css
+++ b/Page3/style.css
@@ -648,7 +648,7 @@ body {
   cursor: pointer;
   height: 30px;
   width: 30px;
-  background-image: url(http://image.flaticon.com/icons/svg/10/10776.svg);
+  background-image: url(https://image.flaticon.com/icons/svg/10/10776.svg);
 }
 
 canvas {
